01-getting-started/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx
# By default
  #type: ClusterIP
# NodePort :
  type: NodePort
# Cloud & Docker-for-Desktop:
  #type: LoadBalancer
# Otherwise:
  #type: NodePort
